--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Data Source=DESKTOP-SNISS5A\\SQLEXPRESS;Initial Catalog=ExpenseTracker;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  }
 }
