--- a/ExpenseTrackerNET7.csproj
+++ b/ExpenseTrackerNET7.csproj
@@ -13,6 +13,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.2" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="20.4.0.44" />
+    <PackageReference Include="Syncfusion.EJ2.PdfViewer.AspNet.Core.Windows" Version="20.4.0.44" />
   </ItemGroup>
 
 </Project>
